Java Core Improvements